crates/plotnik-lib/tests/03-analyze/ref_resolution/resolution_is_case_sensitive.txt
Foo = (x)
Q = (call (FOO))
------------------ DIAGNOSTICS -------------------
error: `FOO` is not defined
 --> query.ptk:2:12
  |
2 | Q = (call (FOO))
  |            ^^^
  |
help: did you mean `(Foo)`?
  |
2 - Q = (call (FOO))
2 + Q = (call (Foo))
  |
help: `(Name)` uses a definition; define `Name = ...` or check the spelling
-------------------- SYMBOLS ---------------------
Foo
Q
  FOO?
